Add path for Pico SDK in .envrc

--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,4 @@
 # Path to manually installed Nordic Semiconductor SDK.
 export NORDIC_SEMI_SDK="/opt/nRF5_SDK_14.2.0_17b948a"
+# Path to manually installed Raspberry Pi Pico SDK.
+export PICO_SDK_PATH="/usr/local/src/pico-sdk"
