--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,6 @@
 # Path to manually installed Nordic Semiconductor SDK.
 export NORDIC_SEMI_SDK="/opt/nRF5_SDK_14.2.0_17b948a"
+# Path to manually installed Nordic Semiconductor SDK v11.
+export NORDIC_SEMI_SDK_V11="/opt/nRF5_SDK_11.0.0_89a8197"
 # Path to manually installed Raspberry Pi Pico SDK.
 export PICO_SDK_PATH="/usr/local/src/pico-sdk"
