STM32x : Exit OpenOCD once programmed

--- a/STM32F1/Makefile
+++ b/STM32F1/Makefile
@@ -170,7 +170,7 @@ openocd:
 	$(OCD) -s $(OCD_DIR) $(OCDFLAGS)
 
 program: all
-	$(OCD) -s $(OCD_DIR) $(OCDFLAGS) -c "program $(TARGET).elf verify reset"
+	$(OCD) -s $(OCD_DIR) $(OCDFLAGS) -c "program $(TARGET).elf verify reset; shutdown"
 
 debug:
 	@if ! nc -z localhost 3333; then \
